refactored structured concurrency test